--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,2 +1,22 @@
+
+
 // Colores 
-$purple: purple;
+$wom_light_purple: #801a93;
+$wom_purple: #701a7f;
+$wom_dark_purple: #421259;
+$wom_darkest_purple: #2b0a37;
+$wom_pink: #fA0080;
+$wom_lightest_gray: #f1f3f5;
+$wom_light_gray: #e4e8eb;
+$wom_gray: #d0d8de;
+$wom_medium_gray: #8b9399;
+$wom_dark_gray: #555b5e;
+
+// Anchos 
+$width_full: 100%;
+$width: 80%;
+
+// Tipografías 
+
+
+$global_font: "cera";
