--- a/css/main.css
+++ b/css/main.css
@@ -30,13 +30,11 @@
   font-style: normal; }
 * {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   margin: 0 auto;
+  padding: 0;
   font-family: "cera"; }
 
-/*body {
-  background-image: url(../sass/assets/img/GUIDELINE_WOM.png);
-  background-size: cover;
-}*/
 h1 {
   font-size: 60px; }
 
@@ -63,10 +61,11 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: stretch; }
 
 .wm-nav {
+  display: flex;
   min-width: 20%;
   padding: 1em;
   height: 100vh;
@@ -81,10 +80,27 @@ footer {
   width: 80%;
   height: 100vh;
   padding: 2em;
-  text-align: justify;
   background-color: #fff;
-  float: right;
   overflow: auto; }
+
+.wm-text {
+  max-width: 960px; }
+
+.url, a {
+  color: #f1f3f5;
+  text-decoration: none; }
+
+.url:hover, a:hover {
+  color: #fA0080;
+  text-decoration: none; }
+
+.img-responsive {
+  max-width: 100%;
+  height: auto; }
+
+.img-center {
+  display: inline-block;
+  margin: auto; }
 
 @media all and (max-width: 576px) {
   .wm-nav, .wm-content {
@@ -100,16 +116,5 @@ footer {
     width: 100%;
     overflow: initial;
     top: 200px; } }
-.url, a {
-  color: #f1f3f5;
-  text-decoration: none; }
-
-.url:hover, a:hover {
-  color: #fA0080;
-  text-decoration: none; }
-
-.img-responsive {
-  max-width: 100%;
-  height: auto; }
 
 /*# sourceMappingURL=main.css.map */
