--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5 , h6 {
   padding: 0.5em;
 }
 
+article {
+  min-height: 400px;
+}
+
 
 
 .wm-container {
@@ -96,7 +100,7 @@ h1, h2, h3, h4, h5 , h6 {
 }
 
 .url:hover, a:hover {
-  @include link($wom_medium_gray);
+  @include link($wom_pink);
 }
 
 .active {
@@ -111,14 +115,17 @@ h1, h2, h3, h4, h5 , h6 {
 
 .img-center {
   display: flex;
-  margin: auto;
+  display: flex;
+  align-items: start;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .text-center {
   text-align: center;
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: 768px) {
   
    .wm-nav, .wm-content, .wm-text {
     width: 100%;
@@ -127,7 +134,6 @@ h1, h2, h3, h4, h5 , h6 {
    }
 
    .wm-nav {
-    //display: none;
     position: static;
     height: 90px;
     overflow: hidden;
@@ -151,7 +157,13 @@ h1, h2, h3, h4, h5 , h6 {
    .toggle-menu {
     display: block;
     float: right;
+    font-size: 2.4em;
+    padding: .45em .8em;
    }
+ }
+
+ .mob-menu {
+  float: right;
  }
 
 
