--- a/css/main.css
+++ b/css/main.css
@@ -787,19 +787,19 @@ article {
   padding: 0;
   background-color: #701a7f;
   color: #fff; }
+  .wm-nav ul {
+    padding: 0;
+    margin: 0; }
+    .wm-nav ul li {
+      width: 100%;
+      list-style-type: none;
+      transition: all .3s ease; }
 
-.wm-nav ul {
-  padding: 0;
-  margin: 0; }
-
-.wm-nav ul li {
-  width: 100%;
-  list-style-type: none;
-  padding: .6em 2em;
-  transition: all .3s ease; }
+.list {
+  padding: .6em 2em; }
 
 .logo {
-  padding: 1em 0.4em; }
+  padding: 0.3em 0.6em; }
 
 .toggle-menu {
   display: none; }
@@ -830,13 +830,13 @@ article {
 
 .active {
   width: 120%;
-  background-color: #801a93; }
+  background-color: #421259; }
 
 .img-responsive {
   max-width: 100%;
   height: auto; }
 
-.img-center {
+.img-flex {
   display: flex;
   display: flex;
   align-items: start;
@@ -853,9 +853,7 @@ article {
     flex-flow: column wrap; }
 
   .wm-nav {
-    position: static;
-    height: 90px;
-    overflow: hidden; }
+    position: fixed; }
 
   .wm-content {
     width: 100%;
@@ -872,8 +870,11 @@ article {
   .toggle-menu {
     display: block;
     float: right;
-    font-size: 2.4em;
-    padding: .45em .8em; } }
+    font-size: 1.6em;
+    padding: .1em .6em; }
+
+  article {
+    margin-top: 90px; } }
 .mob-menu {
   float: right; }
 
