--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -50,23 +50,24 @@ article {
   background-color: #701a7f;
   color: #fff;
   
-  
-}
-
-.wm-nav ul {
+  ul {
   padding: 0;
   margin: 0;
+
+    li {
+      width: 100%;
+      list-style-type: none;
+      transition: all .3s ease;
+    }
+  }
 }
 
-.wm-nav ul li {
-  width: 100%;
-  list-style-type: none;
+.list {
   padding: .6em 2em;
-  transition: all .3s ease;
 }
 
 .logo {
-  padding: 1em 0.4em;
+  padding: 0.3em 0.6em;
 }
 
 .toggle-menu {
@@ -77,7 +78,6 @@ article {
 .wm-content {
   width: 80%;
   padding: 2em;
-  //text-align: justify;
   background-color: #fff;
   
 }
@@ -105,7 +105,7 @@ article {
 
 .active {
   width: 120%;
-  background-color: $wom_light_purple;
+  background-color: $wom_dark_purple;
 }
 
 .img-responsive {
@@ -113,7 +113,7 @@ article {
   height: auto;
 }
 
-.img-center {
+.img-flex {
   display: flex;
   display: flex;
   align-items: start;
@@ -134,9 +134,9 @@ article {
    }
 
    .wm-nav {
-    position: static;
-    height: 90px;
-    overflow: hidden;
+    position: fixed;
+    //height: 90px;
+    //overflow: hidden;
    }
 
    .wm-content {
@@ -157,8 +157,12 @@ article {
    .toggle-menu {
     display: block;
     float: right;
-    font-size: 2.4em;
-    padding: .45em .8em;
+    font-size: 1.6em;
+    padding: .1em .6em;
+   }
+
+   article {
+    margin-top: 90px;
    }
  }
 
