--- a/css/main.css
+++ b/css/main.css
@@ -738,22 +738,28 @@
   font-family: "cera"; }
 
 h1 {
-  font-size: 60px; }
+  font-size: 60px;
+  padding: 0.5em 0 !important; }
 
 h2 {
-  font-size: 34px; }
+  font-size: 34px;
+  padding: 0.5em 0 !important; }
 
 h3 {
-  font-size: 1.7em; }
+  font-size: 1.7em;
+  padding: 0.5em 0 !important; }
 
 h4 {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  padding: 0.5em 0 !important; }
 
 h5 {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  padding: 0.5em 0 !important; }
 
 h6 {
-  font-size: 1em; }
+  font-size: 1em;
+  padding: 0.5em 0 !important; }
 
 p {
   font-size: 1em;
@@ -768,6 +774,8 @@ h1, h2, h3, h4, h5, h6 {
 
 article {
   min-height: 400px; }
+  article p {
+    padding-bottom: 2em; }
 
 .wm-container {
   display: -webkit-box;
@@ -841,10 +849,14 @@ article {
   display: flex;
   align-items: start;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  margin: auto; }
 
 .text-center {
   text-align: center; }
+
+.list-title {
+  padding-left: .5em; }
 
 @media all and (max-width: 768px) {
   .wm-nav, .wm-content, .wm-text {
@@ -865,16 +877,17 @@ article {
     width: 100%; }
 
   .logo {
-    display: inline-block; }
+    display: inline-block;
+    padding: 0.3em 0.6em 0.1em 0.6em; }
 
   .toggle-menu {
     display: block;
     float: right;
-    font-size: 1.6em;
-    padding: .1em .6em; }
+    font-size: 1.3em;
+    padding: .15em .6em; }
 
   article {
-    margin-top: 90px; } }
+    margin-top: 40px; } }
 .mob-menu {
   float: right; }
 
