cambios de espaciado y revisando espaciado

--- a/css/main.css
+++ b/css/main.css
@@ -764,14 +764,11 @@ h6 {
 footer {
   font-size: .813em; }
 
-h1, h2, h3, h4, h5, h6 {
-  padding: 0.5em; }
-
 article {
   min-height: 400px; }
   article p {
     padding-bottom: 2em;
-    line-height: 2.2;
+    line-height: 22px;
     color: #3a333a; }
 
 .wm-container {
@@ -788,7 +785,7 @@ article {
 .wm-nav {
   display: flex;
   flex-direction: column;
-  min-width: 20%;
+  flex: 1 1 20%;
   padding: 0;
   background-color: #701a7f;
   color: #fff; }
@@ -798,10 +795,11 @@ article {
     .wm-nav ul li {
       width: 100%;
       list-style-type: none;
-      transition: all .3s ease; }
+      transition: all .3s ease;
+      line-height: 1.3; }
 
 .list {
-  padding: .6em 55px;
+  padding: .6em 3em;
   font-size: .95em;
   font-weight: bold; }
 
@@ -812,7 +810,8 @@ article {
   display: none; }
 
 .wm-content {
-  width: 80%;
+  display: flex;
+  flex: 1 1 80%;
   padding: 2em;
   background-color: #fff; }
 
@@ -855,7 +854,7 @@ article {
   text-align: center; }
 
 .list-title {
-  padding-left: 35px;
+  padding: .5em 0 .5em 1.2em;
   font-size: 1.3em; }
 
 @media all and (max-width: 768px) {
