Correccion media query

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,7 +16,7 @@ $wom_dark_gray: #555b5e;
 $width_full: 100%;
 $width: 80%;
 
-$padding_reset: .5em 0 !important;
+$padding_reset: .5em 0;
 
 // Tipografías 
 
