--- a/css/main.css
+++ b/css/main.css
@@ -739,27 +739,27 @@
 
 h1 {
   font-size: 60px;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 h2 {
   font-size: 34px;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 h3 {
   font-size: 1.7em;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 h4 {
   font-size: 1.5em;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 h5 {
   font-size: 1.2em;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 h6 {
   font-size: 1em;
-  padding: 0.5em 0 !important; }
+  padding: 0.5em 0; }
 
 footer {
   font-size: .813em; }
@@ -886,8 +886,16 @@ article {
     padding: .15em .6em; }
 
   article {
-    margin-top: 40px; } }
+    margin-top: 40px; }
+
+  .list-title {
+    padding: .5em 0 .5em 1.2em;
+    font-size: 1em; } }
 .mob-menu {
   float: right; }
+
+@media all and (max-width: 992px) {
+  .list-title {
+    font-size: 1em; } }
 
 /*# sourceMappingURL=main.css.map */
