--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -173,11 +173,20 @@ article {
    article {
     margin-top: 40px;
    }
- }
 
- .mob-menu {
+  .list-title {
+    padding: .5em 0 .5em 1.2em;
+  font-size: 1em;
+  }
+}
+
+.mob-menu {
   float: right;
  }
 
-
+@media all and (max-width: 992px) {
+  .list-title {
+    font-size: 1em;
+  }
+}
 
