--- a/css/main.css
+++ b/css/main.css
@@ -766,7 +766,7 @@ footer {
 
 article {
   min-height: 400px;
-  padding-bottom: 30px; }
+  padding-bottom: 70px; }
   article p {
     padding-bottom: 2em;
     line-height: 22px;
@@ -789,7 +789,8 @@ article {
   flex: 1 1 20%;
   padding: 0;
   background-color: #701a7f;
-  color: #fff; }
+  color: #fff;
+  z-index: 999999; }
   .wm-nav ul {
     padding: 0;
     margin: 0; }
@@ -813,10 +814,12 @@ article {
 .wm-content {
   display: flex;
   flex: 1 1 80%;
+  max-width: 80%;
   padding: 2em;
   background-color: #fff; }
 
 .wm-text {
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -825,13 +828,14 @@ article {
 .wm-nav-content {
   top: 0;
   position: fixed;
-  width: 20%; }
+  width: 20%;
+  z-index: 999999; }
 
-.url, a {
+.list a {
   color: #f1f3f5;
   text-decoration: none; }
 
-.url:hover, a:hover {
+.list a:hover {
   color: #fA0080;
   text-decoration: none; }
 
@@ -900,7 +904,8 @@ article {
     font-size: 1.2em; }
 
   .wm-content {
-    flex: 1 1 75%; }
+    flex: 1 1 75%;
+    max-width: 75%; }
 
   .wm-nav-content {
     width: 25%; }
@@ -914,7 +919,24 @@ pre {
 .code-expanded {
   max-height: 100rem; }
 
+.code-section {
+  width: 100%;
+  padding-bottom: 4em; }
+
 .btn-show-moreless {
-  border: 0; }
+  border: 0;
+  outline: none;
+  background: #e92070;
+  padding: .75rem 1rem;
+  color: #fff;
+  font-size: .875rem;
+  border-radius: .25rem;
+  display: block;
+  max-width: 167px;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  margin-left: auto; }
 
 /*# sourceMappingURL=main.css.map */
