--- a/css/main.css
+++ b/css/main.css
@@ -872,7 +872,8 @@ article {
     position: fixed; }
 
   .wm-content {
-    width: 100%;
+    max-width: 100%;
+    flex: 1 1 100%;
     overflow: initial;
     top: 200px; }
 
@@ -926,11 +927,10 @@ pre {
 .btn-show-moreless {
   border: 0;
   outline: none;
-  background: #e92070;
-  padding: .75rem 1rem;
-  color: #fff;
-  font-size: .875rem;
-  border-radius: .25rem;
+  color: #e92070;
+  text-decoration: underline;
+  padding: .25em .5em;
+  font-size: 1rem;
   display: block;
   max-width: 167px;
   width: 100%;
@@ -938,5 +938,53 @@ pre {
   font-weight: 700;
   text-align: center;
   margin-left: auto; }
+
+/* Boton Principal WOM */
+.btn-principal {
+  display: block;
+  width: 150px;
+  padding: 0.75rem 1rem;
+  margin: 1em auto;
+  text-align: center;
+  vertical-align: middle;
+  background: #ff2270;
+  color: #fff;
+  border-radius: .2rem;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.btn-principal:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #af0861;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  border-radius: .2rem; }
+
+.btn-principal:hover, .btn-principal:focus, .btn-principal:active {
+  color: white; }
+
+.btn-principal:hover:before, .btn-principal:focus:before, .btn-principal:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1); }
 
 /*# sourceMappingURL=main.css.map */
