--- a/sass/_bases.scss
+++ b/sass/_bases.scss
@@ -224,9 +224,10 @@ pre {
 .code-section {
   width: 100%;
   padding-bottom: 4em;
+  text-align: right;
 }
 
-.btn-show-moreless span, .btn-copy-clipboard {
+.btn-show-moreless, .btn-copy-clipboard {
   border: 0;
   outline: none;
   color: #e92070;
