--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,12 +1,12 @@
 
 
 // Colores 
-$wom_light_purple: #801a93;
-$wom_purple: #701a7f;
-$wom_dark_purple: #421259;
-$wom_darkest_purple: #2b0a37;
-$wom_pink: #fA0080;
-$wom_lightest_gray: #f1f3f5;
+$wom_light_purple: #961397;
+$wom_purple: #831383;
+$wom_dark_purple: #4b0a5a;
+$wom_darkest_purple: #2e0434;
+$wom_pink: #fe0084;
+$wom_lightest_gray: #f2f3f7;
 $wom_light_gray: #e4e8eb;
 $wom_gray: #d0d8de;
 $wom_medium_gray: #8b9399;
